# opencode-trading

./: .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
src/opencode_trading/: __init__.py  __main__.py  _frontmatter.py  _yaml_min.py  attach.py  cli.py  exceptions.py  models.py  verify.py
src/opencode_trading/_bundled/agents/: execution-operator.toml  news-analyst.toml  portfolio-manager.toml  technical-analyst.toml  valuation-analyst.toml
src/opencode_trading/_bundled/mainagent/: subagent-registry.yaml
src/opencode_trading/_bundled/orchestrator/manage-subagents/: SKILL.md
src/opencode_trading/_bundled/orchestrator/postmortem/: SKILL.md
src/opencode_trading/_bundled/orchestrator/scenario-quality-gates/: SKILL.md
src/opencode_trading/_bundled/prompts/: head-manager.md
src/opencode_trading/_bundled/role-skills/execution-operator/execute-paper-order/: SKILL.md
src/opencode_trading/_bundled/role-skills/portfolio-manager/create-order-ticket/: SKILL.md
src/opencode_trading/_bundled/role-skills/portfolio-manager/portfolio-review/: SKILL.md
src/opencode_trading/_bundled/role-skills/risk-manager/policy-review/: SKILL.md
src/opencode_trading/_bundled/tradingcodex/: config.yaml
src/opencode_trading/converters/: __init__.py  agents.py  codex_to_opencode.py  commands.py  hooks.py  mcp.py  workflows.py
tests/: conftest.py  test_agents.py  test_attach.py  test_bundled.py  test_cli.py  test_codex_to_opencode.py  test_commands.py  test_converters.py  test_frontmatter.py  test_hooks.py  test_mcp.py  test_models.py  test_verify.py  test_with_tcx.py  test_workflows.py  test_yaml_min.py
tests/fixtures/sample-tcx-workspace/.agents/skills/external-data-source-gate/: SKILL.md
tests/fixtures/sample-tcx-workspace/.agents/skills/orchestrate-workflow/: SKILL.md
tests/fixtures/sample-tcx-workspace/.agents/skills/synthesize-decision/: SKILL.md
tests/fixtures/sample-tcx-workspace/.codex/: config.toml  hooks.json
tests/fixtures/sample-tcx-workspace/.codex/agents/: fundamental-analyst.toml  instrument-analyst.toml  macro-analyst.toml  risk-manager.toml
tests/fixtures/sample-tcx-workspace/.codex/hooks/: tradingcodex_hook.py
tests/fixtures/sample-tcx-workspace/.tradingcodex/: config.yaml
tests/fixtures/sample-tcx-workspace/.tradingcodex/mainagent/: head-manager.yaml
tests/fixtures/sample-tcx-workspace/.tradingcodex/subagents/skills/fundamental-analyst/fundamental-analysis/: SKILL.md
tests/fixtures/sample-tcx-workspace/.tradingcodex/subagents/skills/risk-manager/approve-order/: SKILL.md
tests/fixtures/sample-tcx-workspace/.tradingcodex/subagents/skills/risk-manager/review-risk/: SKILL.md
tests/fixtures/sample-tcx-workspace/.tradingcodex/workflows/: analyze.yaml  order-review.yaml  postmortem.yaml
