[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-trading"
version = "0.4.0"
description = "OpenCode adapter for TradingCodex — convert Codex-native trading harness to OpenCode + oh-my-openagent workflows."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
authors = [
  {name = "sigco3111"}
]
keywords = ["opencode", "oh-my-openagent", "trading", "codex", "tradingcodex", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "coverage[toml]>=7",
    "build>=1.0",
]
tradingcodex = [
  "tradingcodex>=0.2.0",
]

[project.scripts]
opencode-trading = "opencode_trading.cli:main"

[project.urls]
Homepage = "https://github.com/sigco3111/opencode-trading"
Issues = "https://github.com/sigco3111/opencode-trading/issues"
TradingCodex = "https://github.com/monarchjuno/tradingcodex"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"opencode_trading._bundled" = ["**/*.toml", "**/*.yaml", "**/*.json", "**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.coverage.run]
branch = true
source = ["src/opencode_trading"]
omit = [
    "src/opencode_trading/__main__.py",
    "src/opencode_trading/_bundled/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
